# DataSynth

./: .gitignore  README.md  app.py  pyproject.toml
pytest/: test_agent_config.py  test_agents.py  test_models.py  test_tools.py
src/synth_tool/: __init__.py  agent_config.py  agents.py  models.py  service.py  tools.py
src/synth_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_service.py  test_tools.py
